[project]
name = "pysha-sdk"
version = "0.1.0"
description = "A high-performance Python SDK with Cython-optimized utilities for string manipulation, cryptography, object handling, and more."
readme = "README.md"
authors = [
    { name = "guysha94", email = "guy.sha@superplay.co" }
]
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "glom>=25.12.0",
    "inflect>=7.5.0",
    "phonenumbers>=9.0.21",
    "pydantic>=2.12.5",
    "pydash>=8.0.5",
]

[project.optional-dependencies]
inflect = ["inflect"]
phonenumbers = ["phonenumbers"]
email = ["email-validator"]
bson = ["pymongo"]

[project.scripts]
pysha-sdk = "pysha_sdk:main"

[build-system]
requires = ["setuptools>=61.0", "cython>=3.2.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pysha_sdk = ["utils/strings/*.pyx", "utils/crypto/*.pyx", "utils/objects/*.pyx", "utils/mixins/**/*.pyx"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.mypy]
python_version = "3.13"
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
implicit_optional = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
show_error_code_links = true
pretty = true
color_output = true
show_absolute_path = true
plugins = ["returns.contrib.mypy.returns_plugin"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
indent-width = 4



[tool.ruff.lint]
allowed-confusables = ["−", "ρ", "∗"]
fixable = ["ALL"]
ignore = []
select = ["E4", "E7", "E9", "F", "B", "Q"]
unfixable = []



[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "E402", "F403"]
"**/{tests,docs,tools}/*" = ["E402", "F403"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/pysha_sdk",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "-v",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
